# Umbrifera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  pipeline.md  run.sh  tasks.md
.github/: copilot-instructions.md
include/: FileNavigator.h  UIConfig.h  UIHelpers.h  UmbriferaApp.h
shaders/: Shaders.metal
src/: FileNavigator.mm  UmbriferaApp.mm  UmbriferaApp_Image.mm  UmbriferaApp_Render_Metal.mm  UmbriferaApp_UI.mm  main.cpp
